# Py-Automata-Theory

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
PyAutomataTheory/automatas/: __init__.py  mealy_automata.py  moor_automata.py
PyAutomataTheory/jflap/: to_jflap_mealy.py  to_jflap_moor.py
PyAutomataTheory/maximization/: __init__.py  anger_pohl.py  save_docx.py  vis.py
PyAutomataTheory/minimization/: __init__.py  pi_minimization.py
PyAutomataTheory/transformations/: from_mealy_to_moor.py
automatas/: base_automata.py  mealy_automata.py  moor_automata.py
jflap/: __init__.py  to_jflap_mealy.py  to_jflap_moor.py
minimization/: pi_minimization.py
transformations/: __init__.py  from_mealy_to_moor.py
