[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "PyAutomataTheory",
    "PyAutomataTheory.jflap",
    "PyAutomataTheory.automatas",
    "PyAutomataTheory.minimization",
    "PyAutomataTheory.transformations"
    "PyAutomataTheory.maximization"
]

[project]
name = "PyAutomataTheory"
version = "0.0.2"
description = "A simple library for working with Mealy and Moore machines."
authors = [
  { name = "remr2005", email = "morpeh2005ka@gmail.com" }
]
